--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,11 @@ body {
 	visibility: hidden;
 }
 
+.checkbox {
+	margin-bottom: 30px;
+	font-size: 40px;
+}
+
 .btn {
 	width: 40px;
 	height: 40px;	
